# MemberSystem

./: .gitignore  CMakeLists.txt  Member.cpp  MemberManager.cpp  README.md  System.cpp  Utils.cpp  main.cpp
include/: Member.h  MemberManager.h  System.h  Utils.h
